--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Library"]
 	path = Library
-	url = https://github.com/RafaelMicro/Library.git
+	url = git@github.com:tridentiot/Library.git
